Fix grey
gray colour was too dark

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@ $dark-gray: #3e3e40;
 $mid-gray: #999999;
 $slate: #3F526F;
 $white: #FFF;
-$gray: #EEE;
+$gray: #fafafa;
 $blurple: #5461C8;
 $dark-slate: #2c3c55;
 $black: #000;
